Adjust spacing issues in menu.

--- a/content/themes/default/css/sidebar.css
+++ b/content/themes/default/css/sidebar.css
@@ -108,7 +108,6 @@
     text-transform: uppercase;
     font-weight: 600;
     transition: 0.4s;
-    line-height: 0.9em;
 }
 
 .side-menu-item i {
@@ -134,7 +133,6 @@
     cursor: pointer;
     border-bottom: none;
     list-style: none;
-    line-height: 0.7em;
 }
 
 .sidenav a:hover {
@@ -169,7 +167,6 @@ span#menu {
     }
     
     li.side-menu-item {
-        width: 101px;
         display: inline-block;
     }
 }
